--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,49 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
-pandas
-json
-gensim
-math
-scipy
-nltk
+binaryornot==0.4.4
+bitstring==3.1.5
+docker==3.2.1
+docker-pycreds==0.3.0
+editdistance==0.4
+entrypoints==0.3
+et-xmlfile==1.0.1
+fastai==1.0.52
+fastprogress==0.1.21
+fastrlock==0.4
+flaky==3.4.0
+gensim==3.4.0
+html5lib==1.0.1
+hupper==1.6.1
+hypothesis==3.88.3
+idna==2.8
+imagesize==1.0.0
+ipykernel==5.1.1
+keyring==13.2.1
+kiwisolver==1.0.1
+lazy-object-proxy==1.3.1
+matplotlib==3.1.0
+mccabe==0.6.1
+mistune==0.8.4
+nltk==3.3
+numexpr==2.6.9
+numpy==1.16.3
+numpydoc==0.8.0
+openpyxl==2.6.1
+overrides==1.9
+packaging==17.1
+pandas==0.25.3
+pandocfilters==1.4.2
+pytz==2018.9
+PyYAML==5.1.1
+pyzmq==18.0.1
+records==0.5.2
+regex==2019.4.14
+requests==2.22.0
+scikit-learn==0.21.3
+scipy==1.2.0
+seaborn==0.10.0
+Sphinx==1.7.5
+sphinxcontrib-websupport==1.1.0
+SQLAlchemy==1.3.4
+stanza==0.3
+tablib==0.13.0
+tqdm==4.43.0
 textblob
